# hdc_library

./: .gitignore  README.md  build-profile.json5  hvigorfile.ts  obfuscation-rules.txt  oh-package.json5
src/main/: module.json5
src/main/cpp/: CMakeLists.txt
src/main/cpp/hdc_core/src/common/: async_cmd.cpp  async_cmd.h  auth.cpp  auth.h  base.cpp  base.h  channel.cpp  channel.h  circle_buffer.cpp  command_event_report.cpp  command_event_report.h  common.h  compress.cpp  credential_message.cpp  credential_message.h  decompress.cpp  define.h  define_enum.h  define_plus.h  entry.cpp  entry.h  file.cpp  file_descriptor.cpp  file_descriptor.h  forward.cpp  forward.h  hdc_hash_gen.h  hdc_huks.cpp  hdc_huks.h  hdc_ssl.cpp  hdc_ssl.h  hdc_statistic_reporter.cpp  hdc_statistic_reporter.h  heartbeat.cpp  log.h  memory_pool.cpp  memory_pool.h  password.cpp  password.h  serial_struct.h  (+12 more)
src/main/cpp/hdc_core/src/host/: client.cpp  client.h  ext_client.cpp  ext_client.h  host_app.cpp  host_app.h  host_common.h  host_ssl.cpp  host_ssl.h  host_tcp.cpp  host_unity.cpp  host_updater.cpp  host_updater.h  server.h  server_stub.cpp  system_depend.cpp  system_depend.h  translate.cpp  translate.h
src/main/cpp/napi/: hdc_client_wrapper.cpp  hdc_client_wrapper.h  hdc_napi.cpp  hdc_napi.h
src/main/ets/: HdcClient.ets  HdcError.ets  Index.ets
